Fix new badge z-index, remove console error, code cleanup.

--- a/app/components-react/shared/NewBadge.m.less
+++ b/app/components-react/shared/NewBadge.m.less
@@ -12,6 +12,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  z-index: 1002;
 }
 
 .small {
